# TinyGrapeKit

./: .gitignore  CMakeLists.txt  package.xml
app/FilterFusion/: CMakeLists.txt
app/FilterFusion/example/: RunKAISTData.cpp
app/FilterFusion/include/FilterFusion/: FilterFusionSystem.h
app/FilterFusion/params/: KAIST.yaml
app/FilterFusion/src/: FilterFusionSystem.cpp
example/: ReadKAISTBag.cpp  RunKAISTData.cpp
include/: System.h  Timer.h
include/FilterFusion/: FilterFusionSystem.h  GpsUpdater.h  Parameter.h  Propagator.h  State.h  VisualUpdater.h
include/Geometry/: Triangulator.h
include/Util/: Util.hpp  file_manager.hpp
launch/: kaist.launch  read_kaist_bag.launch  vins_rviz_config.rviz
params/: KAIST.yaml
src/: FilterFusionSystem.cpp  GpsUpdater.cpp  PlaneUpdater.cpp  StateAugmentor.cpp  System.cpp  UpdaterUtil.cpp  VisualUpdater.cpp  file_manager.cpp
src/base/: WheelPropagator.cpp
